grocy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: grocy
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: grocy
      app.kubernetes.io/name: grocy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: grocy
        app.kubernetes.io/name: grocy
    spec:
      automountServiceAccountToken: true
      containers:
        - image: 'linuxserver/grocy:3.3.1'
          imagePullPolicy: IfNotPresent
          name: grocy
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: vol
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      serviceAccountName: default
      volumes:
        - name: vol
          persistentVolumeClaim:
            claimName: grocy
