grocy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: grocy
spec:
  ports:
    - name: http
      port: 9283
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: grocy
    app.kubernetes.io/name: grocy
  type: ClusterIP
