grocy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: grocy
  namespace: grocy
spec:
  ingressClassName: nginx
  rules:
    - host: grocy.homelab.bartbrinkman.nl
      http:
        paths:
          - backend:
              service:
                name: grocy
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grocy.homelab.bartbrinkman.nl
      secretName: grocy-tls
